--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,17 @@
 <html lang="zh-Hant-TW">
   <head>
     <meta charset="utf-8">
+    <meta name="description" content="島嶼旅行的專家，準備帶給您一場全新的旅遊體驗。">
+    <meta name="keywords" content="島嶼, 旅行, 旅遊, 專家, 豊島,旅行社, 日本, 太西洋">
+    <meta name="author" content="shio">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <!-- <title><%= htmlWebpackPlugin.options.title %></title> -->
     <title>島遊</title>
+    <meta property="og:url" content="https://s912543hgit.github.io/island-travel/#/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="島遊" />
+    <meta property="og:description" content="島嶼旅行的專家，準備帶給您一場全新的旅遊體驗。" />
   </head>
   <body>
     <noscript>
